gccida/g2/final_scan_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2325:4: error: expected ';' after expression
rtx v48; // [rsp+0h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2325:5: error: use of undeclared identifier 'v48'
rtx v48; // [rsp+0h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2326:6: error: use of undeclared identifier 'i'
rtx *i; // [rsp+8h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2336:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( int)insn[3]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2361:22: error: unexpected type name 'FILE': expected identifier
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2361:27: error: expected ')'
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2361:15: note: to match this '('
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2361:17: error: a parameter list without types is only allowed in a function definition
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2372:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2393:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( const char *)insn[4]; 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2427:23: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( ( unsigned int)( debug_info_level_0 - 2) <= 1 
                      ^~~~~~~~~~~~~~~~~~
                      debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2449:23: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( ( unsigned int)( debug_info_level_0 - 2) <= 1 
                      ^~~~~~~~~~~~~~~~~~
                      debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2527:17: error: use of undeclared identifier 'stru_6F109F'
( const char *)&stru_6F109F._IO_save_end + 7, 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2574:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v29 = ( const char *)insn[2]; 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2596:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2650:29: error: expected expression
if ( asm_noperands( *( rtx *)&insn[2]) >= 0 ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2652:28: error: expected ')'
v37 = asm_noperands( ( rtx)v9); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2652:20: note: to match this '('
v37 = asm_noperands( ( rtx)v9); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2656:1: error: use of undeclared identifier 'i'
i = &v48; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2656:6: error: use of undeclared identifier 'v48'
i = &v48; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2657:34: error: expected ')'
v39 = decode_asm_operands( ( rtx)v9, &v48, 0LL, 0LL, 0LL); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/final.c:2657:26: note: to match this '('
v39 = decode_asm_operands( ( rtx)v9, &v48, 0LL, 0LL, 0LL); 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_scan_insn/src/obj/final.o] Error 1
